--- a/final/templates/main.html
+++ b/final/templates/main.html
@@ -35,11 +35,11 @@
      <script>
 	var pkg = 0;
 
-	setKg() {
+	function setKg() {
 	    pkg = 1;
 	}
 
-	setLb() {
+	function setLb() {
 	    pkg = 0;
 	}    
 
