--- a/final/templates/main.html
+++ b/final/templates/main.html
@@ -21,6 +21,11 @@
 	<div>
 	    <progress id="myProgress" value="0" max="100"></progress>
 	</div>
+
+	<div>
+	    <p class="progress-numbers">0 kgs/lbs</p>
+	    <p class="progress-numbers.right">120 kgs/ 265 lbs</p>
+	</div>
 	
 	<div class="container" >
 	    <button id="button1"  onclick="updateProgress()">Press me</button>
