--- a/final/templates/main.html
+++ b/final/templates/main.html
@@ -22,9 +22,13 @@
 	    <progress id="myProgress" value="0" max="100"></progress>
 	</div>
 
-	<div>
-	    <p class="progress-numbers">0 kgs/lbs</p>
-	    <p class="progress-numbers.right">120 kgs/ 265 lbs</p>
+	<div style="display: flex; align-items: center;">
+    		<div style="flex-grow: 1;">
+        		<p class="progress-numbers">0 kgs/lbs</p>
+    		</div>
+    		<div style="flex-grow: 1; text-align: right;">
+        		<p class="progress-numbers.right">120 kgs/ 265 lbs</p>
+   		 </div>
 	</div>
 	
 	<div class="container" >
