--- a/final/templates/main.html
+++ b/final/templates/main.html
@@ -38,6 +38,10 @@
 	<div id="solidText" style="text-align: center">Your Grip Strength Is: </div>
 	<div class="output"  style="text-align: center; margin-top:25px" id="output1"></div>
 
+	<div class="embed-responsive embed-responsive-16by9" style="align-items:center; margin-top: 25px;">
+		<iframe src="https://iot.app.initialstate.com/embed/#/tiles/bkt_a2655q8lvl5v4th"></iframe>
+	</div>
+
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
      </body> 
 
