--- a/final/templates/main.html
+++ b/final/templates/main.html
@@ -9,7 +9,11 @@
    
      <body>
         <h1 style="text-align:center">Zach and Charlie’s Super Awesome and Cool Computer Organization Group</h1>
-        <h2 style="text-align:center">Final Project - Grip Strength Tracker</h2>
+        <h2 style="text-align:center">Final Project - Grip Strength Tester</h2>
+     </body>
+
+     <body>
+	<p style="text-align:center">This project is a grip strength tester using a strain gauge and a Raspberry Pi. It uses an HX711 analog to digital signal converter to convert the strain gauge signal to digital signal which the pi can recognize.</p>
      </body>
 
      <body>
@@ -37,10 +41,6 @@
 
 	<div id="solidText" style="text-align: center">Your Grip Strength Is: </div>
 	<div class="output"  style="text-align: center; margin-top:25px" id="output1"></div>
-
-	<div class="embed-responsive embed-responsive-16by9" style="align-items:center; margin-top: 25px;">
-		<iframe src="https://iot.app.initialstate.com/embed/#/tiles/bkt_a2655q8lvl5v4th"></iframe>
-	</div>
 
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
      </body> 
